demo/custom_components_demo/.metadata/.plugins/org.eclipse.cdt.ui/custom_component.build.log
22:56:25 **** Build of configuration Nios II for project custom_component ****
make all 
Info: Building ../custom_component_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../custom_component_bsp/
[BSP build complete]
Info: Compiling custom_component_demo.c to obj/default/custom_component_demo.o
nios2-elf-gcc -xc -MP -MMD -c -I../custom_component_bsp//HAL/inc -I../custom_component_bsp/ -I../custom_component_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/custom_component_demo.o custom_component_demo.c
custom_component_demo.c:53:32: error: 'MY_CUSTOM_IP_0_BASE' undeclared here (not in a function)
 uint32* CustomIpPtr = (uint32*)MY_CUSTOM_IP_0_BASE;
                                ^
custom_component_demo.c: In function 'main':
custom_component_demo.c:124:24: error: 'MY_CUSTOM_IP_0_IRQ_INTERRUPT_CONTROLLER_ID' undeclared (first use in this function)
   alt_ic_isr_register (MY_CUSTOM_IP_0_IRQ_INTERRUPT_CONTROLLER_ID,
                        ^
custom_component_demo.c:124:24: note: each undeclared identifier is reported only once for each function it appears in
custom_component_demo.c:125:24: error: 'MY_CUSTOM_IP_0_IRQ' undeclared (first use in this function)
                        MY_CUSTOM_IP_0_IRQ, customIpIsr, 0, 0);
                        ^
make: *** [obj/default/custom_component_demo.o] Error 1

22:56:26 Build Finished (took 848ms)

